addded waitlist form

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </a>
             </li>
              <li>
-                <a href="saurav@oaeroo.com"> 
+                <a href="mailto:saurav@oaeroo.com"> 
                     <i class="fa fa-envelope-o"></i>
                     Email
                 </a>
@@ -103,14 +103,14 @@
                 </h5>
                 <div class="row">
                     <div class="col-md-4 col-md-offset-4 col-sm6-6 col-sm-offset-3 ">
-                        <form class="form-inline" role="form">
+                        <!--<form class="form-inline" role="form">
                           <div class="form-group">
                             <label class="sr-only" for="exampleInputEmail2">Email address</label>
                             <input type="email" class="form-control transparent" placeholder="Your email here...">
                           </div>
                           <button type="submit" class="btn btn-danger btn-fill">Notify Me</button>
-                        </form>
-
+                        </form>-->
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeHHg6i2mFCQx-iKx7bkvM0MT-BLh3eXZSAJoWLsDjF3WiXqw/viewform?embedded=true" width="640" height="2790" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                     </div>
                 </div>
             </div>
@@ -118,7 +118,7 @@
     </div>
     <div class="footer">
       <div class="container">
-             Made with <i class="fa fa-heart heart"></i> by <a href="#">Saurav Bhattarai</a>
+             Made with <i class="fa fa-heart heart">love</i> by <a href="#">Saurav Bhattarai</a>
       </div>
     </div>
  </div>
