--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-   <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-         <li class="dropdown">
+         <!--<li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"> 
                 <img src="images/flags/US.png"/>
                 English(US) 
@@ -54,7 +54,7 @@
                 <li><a href="#"><img src="images/flags/TR.png"/> Türkçe <span class="label label-default">soon</span></a></li>
              
               </ul>
-        </li>
+        </li>-->
 
       </ul>-->
       <ul class="nav navbar-nav navbar-right">
