added header images

--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    
+  <style>
+    body {
+        margin: 0;
+        padding: 0;
+    }
+    .header-image {
+        width: 100%;
+        height: auto;
+    }
+</style>
+<header>
+  <img src="images/saffron-header-logo.jpg" alt="Header Image Annapurna Aerofarms" class="header-image">
+</header>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
     
