--- a/index.html
+++ b/index.html
@@ -150,12 +150,15 @@
                           </div>
                           <button type="submit" class="btn btn-danger btn-fill">Notify Me</button>
                         </form>--><img src="images/saffron-header-logo.jpg" alt="Header Image Annapurna Aerofarms" class="header-image">
-                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeFqZNN8WbDxG3VAwv2McUEgNp-ahfGurJBqV0iitvJrjTe5A/viewform?embedded=true" width="912" height="3047" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                        
                     </div>
                 </div>
             </div>
         </div>
     </div>
+<div  class="form">
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeFqZNN8WbDxG3VAwv2McUEgNp-ahfGurJBqV0iitvJrjTe5A/viewform?embedded=true" width="912" height="3047" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+</div>
     <div class="footer">
       <div class="container">
              Made with <i class="fa fa-heart heart">love</i> by <a href="#">Saurav Bhattarai</a>
