div class heart

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 </div>
     <div class="footer">
       <div class="container">
-             Made with <i class="fa fa-heart heart">love</i> by <a href="#">Saurav Bhattarai</a>
+             Made with <i class="heart">love</i> by <a href="#">Saurav Bhattarai</a>
       </div>
     </div>
  </div>
