--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 <!--    Change the image source '/images/default.jpg' with your favourite image.     -->
     
-    <div class="cover black" data-color="black"></div>
+    <div class="cover black" data-color="white"></div>
      
 <!--   You can change the black color for the filter with those colors: blue, green, red, orange       -->
 
