mod nothing ui fixes- minimal

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                             <input type="email" class="form-control transparent" placeholder="Your email here...">
                           </div>
                           <button type="submit" class="btn btn-danger btn-fill">Notify Me</button>
-                        </form>--><img src="images/saffron-header-logo.jpg" alt="Header Image Annapurna Aerofarms" class="header-image">
+                        </form>-->
                         
                     </div>
                 </div>
@@ -157,6 +157,7 @@
         </div>
     </div>
 <div  class="form">
+  <img src="images/saffron-header-logo.jpg" alt="Header Image Annapurna Aerofarms" class="header-image">
   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeFqZNN8WbDxG3VAwv2McUEgNp-ahfGurJBqV0iitvJrjTe5A/viewform?embedded=true" width="912" height="3047" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </div>
     <div class="footer">
