--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             </div>
         </div>
     </div>
-<div  class="form">
+<div  class="content">
   <img src="images/saffron-header-logo.jpg" alt="Header Image Annapurna Aerofarms" class="header-image">
   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeFqZNN8WbDxG3VAwv2McUEgNp-ahfGurJBqV0iitvJrjTe5A/viewform?embedded=true" width="912" height="3047" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </div>
