--- a/index.html
+++ b/index.html
@@ -142,7 +142,12 @@
                     Join the waiting list for the updates. We will keep you posted. 
                 </h5>
                 <div class="row">
-                    <div class="col-md-4 col-md-offset-4 col-sm6-6 col-sm-offset-3 ">
+                    <div class="col-md-1 col-md-offset-1 col-sm6-1 col-sm-offset-1 ">
+                      <!--<div class="col-md-4 col-md-offset-4 col-sm6-6 col-sm-offset-3 ">-->
+                      <div  class="row">
+                        <img src="images/saffron-header-logo.jpg" alt="Header Image Annapurna Aerofarms" class="header-image">
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeFqZNN8WbDxG3VAwv2McUEgNp-ahfGurJBqV0iitvJrjTe5A/viewform?embedded=true" width="912" height="3047" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                      </div>
                         <!--<form class="form-inline" role="form">
                           <div class="form-group">
                             <label class="sr-only" for="exampleInputEmail2">Email address</label>
@@ -156,10 +161,7 @@
             </div>
         </div>
     </div>
-<div  class="content">
-  <img src="images/saffron-header-logo.jpg" alt="Header Image Annapurna Aerofarms" class="header-image">
-  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeFqZNN8WbDxG3VAwv2McUEgNp-ahfGurJBqV0iitvJrjTe5A/viewform?embedded=true" width="912" height="3047" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-</div>
+
     <div class="footer">
       <div class="container">
              Made with <i class="heart">love</i> by <a href="#">Saurav Bhattarai</a>
