theo only and one and only commit of the index changed some stats like column length etc and removed header class from the code image of it.

--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
                     Join the waiting list for the updates. We will keep you posted. 
                 </h5>
                 <div class="row">
-                    <div class="col-md-1 col-md-offset-1 col-sm6-1 col-sm-offset-1 ">
+                    <div class="col-md-1 col-md-offset-1 col-sm0-1 col-sm-offset-1 ">
                       <!--<div class="col-md-4 col-md-offset-4 col-sm6-6 col-sm-offset-3 ">-->
                       
-                        <img src="images/saffron-header-logo.jpg" alt="Header Image Annapurna Aerofarms" class="header-image">
+                        <img src="images/saffron-header-logo.jpg">
                         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeFqZNN8WbDxG3VAwv2McUEgNp-ahfGurJBqV0iitvJrjTe5A/viewform?embedded=true" width="912" height="3047" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                       
                         <!--<form class="form-inline" role="form">
