--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <!-- Main Content -->
     <div class="main" style="background-image: url('images/default.jpg')">
         <div class="cover black" data-color="red"></div>
-        <div class="container">
+        <div class="container"><img src="images/saffron-header-logo.jpg" alt="Dynamic Image" style="max-width: 100%; height: auto;">
             <h1 class="logo cursive">Annapurna Aerofarms</h1>
             <div class="content">
                 <h4 class="motto">AI-powered high-density farming for premium high value spices.</h4>
