--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
 
     <!-- Header Image -->
     <header>
-        <img src="images/saffron-header-logo.jpg" alt="Header Image Annapurna Aerofarms" class="header-image">
+        <img src="images/transparent-bg.png" alt="Header Image Annapurna Aerofarms" class="header-image">
     </header>
 
     <!-- Main Content -->
     <div class="main" style="background-image: url('images/default.jpg')">
         <div class="cover black" data-color="red"></div>
-        <div class="container"><img src="images/saffron-header-logo.jpg" alt="Dynamic Image" style="max-width: 100%; height: auto;">
+        <div class="container"><img src="images/transparent-bg.png" alt="Dynamic Image" style="max-width: 100%; height: auto;">
             <h1 class="logo cursive">Annapurna Aerofarms</h1>
             <div class="content">
                 <h4 class="motto">AI-powered high-density farming for premium high value spices.</h4>
