--- a/index.html
+++ b/index.html
@@ -70,13 +70,7 @@
             transform: rotate(45deg);
             transform-origin: 100% 100%;
         }
-                
-        /* Remove black semi-transparent ribbon on mobile */
-        @media (max-width: 767px) {
-            .cover.black {
-                display: none;
-            }
-        }
+        
     </style>
 </head>
 
@@ -93,7 +87,7 @@
                 </button>
             </div>
 
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="navbar-transparent>
                 <!--<ul class="nav navbar-nav navbar-right">-->
                   <ul class="nav"></ul>
                     <li>
