email button color changed, mailto added in footer

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             background-color: transparent;
             border: none;
             font-size: 18px;
-            color: #fff;
+            color: #b51010;
             cursor: pointer;
             z-index: 100; /* Ensure it stays above other elements */
         }
@@ -71,7 +71,7 @@
 <body>
     <!-- Email Button -->
     <button class="email-button" onclick="window.location.href='mailto:saurav@oaeroo.com';">
-        <i class="fa fa-envelope-o"></i>Email
+        <i class="fa fa-envelope-o"></i>Email Us
     </button>
 
     <!-- Header Image -->
@@ -106,7 +106,7 @@
         <!-- Footer -->
         <div class="footer">
             <div class="container">
-                Made with <i class="fa fa-heart"></i> by <a href="#">Saurav Bhattarai</a>
+                Made with <i class="fa fa-heart"></i> by <a href="mailto:saurav@oaeroo.com">Saurav Bhattarai</a>
             </div>
         </div>
     </div>
